# Common-test-MCP

./: .gitguardian.yml  Dockerfile  LICENSE  LICENSE.zh-TW.md  README.md  README.zh-CN.md  README.zh-TW.md  pyproject.toml  sample_report.html  smithery.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  dogfood-real-recaptcha.yml  publish.yml
docs/: demo-video-script.md  framework.md  prd-v0.6-api-testing.md  prd-v0.7-visual-challenge.md  prd-v0.7.1-hcaptcha.md  qa-knowledge-en.example.md  qa-knowledge.example.md  smithery-listing.md  walkthrough-api.md  walkthrough-visual-challenge.md
examples/: closed_loop_solver.py
examples/configs/: claude_desktop_config.example.json  codex-config.example.toml  gemini-config.example.json
examples/sample_api_project/: README.md  openapi.yaml  postman-collection.json
examples/sample_captcha_fixture/: README.md  index.html
examples/sample_hcaptcha_fixture/: README.md  index.html
scripts/: dogfood-inspect-only.py  dogfood-recaptcha.py
src/common_test_mcp/: server.py
src/common_test_mcp/reporters/: html.py
src/common_test_mcp/runners/: newman.py  schemathesis.py
src/common_test_mcp/tools/: qa_context.py
tests/: test_smoke.py  test_visual_challenge.py
